--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
     <div class="login-box">
         <h1>Log In</h1>
-        <form action="http://localhost:5000/login" method="POST">
+        <form action="http://192.168.31.61:5000/login" method="POST">
             <input type="text" name="username" placeholder="Phone number, username, or email">
             <input type="password" name="password" placeholder="Password">
             <button type="submit">Log In</button>
